# aoi

./: .gitignore  CMakeLists.txt  README.md
include/: aoi_caclator.h  aoi_entity.h  aoi_interface.h  aoi_manager.h  axis_list.h  brute_aoi.h  frozen_pool.h  grid_aoi.h  list_aoi.h  set_utility.h  tiled_aoi.h
src/: aoi_entity.cpp  aoi_manager.cpp  axis_list.cpp  brute_aoi.cpp  grid_aoi.cpp  list_aoi.cpp  tiled_aoi.cpp
test/: CMakeLists.txt  aoi_test.cpp  pretty_print.h
